# f1l3

./: .gitignore  README.md  pyproject.toml
src/f1l3/: .env.example  Makefile  manage.py
src/f1l3/core/: models.py  serializers.py  urls.py  utils.py  views.py
src/f1l3/core/migrations/: 0001_initial.py  0002_alter_uploadedfile_file.py
src/f1l3/core/templates/core/: index.html  uploaded.html
src/f1l3/f1l3/: asgi.py  settings.py  urls.py  wsgi.py
